[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CAPP"
version = "0.0"
description = "Console Application Creator"
readme = "README.md"
authors = [{ name = "EnDaTeam"}]
license = { file = "License" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["console", "application", "terminal"]
dependencies = [
    "colorama >= 0.4.6",
    " pystyle >= 2.0",
    "pyfiglet >= 0.7"
]
requires-python = ">=3.0"

[project.urls]
Homepage = "https://github.com/EnDaTeam/EnDa-Console-App-Package"

[project.scripts]
realpython = "reader.__main__:main"